[package]
name = "challenge-1-contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "xcm", default-features = false }
polkavm-derive = "0.11.0"

[lib]
path = "lib.rs"
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib",
  "rlib",
]

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
